# reticulate

./: README.md  USER-MANUAL.md  pyproject.toml
benchmarks/: __init__.py  dominion_attack.py  hex2x2.py  nim3.py
github-action/: README.md  action.yml
man/: reticulate.1
output/: product3d-deep.html  product3d.html  product4d-factored.html  product4d.html
reticulate/: __init__.py  __main__.py  aesthetics.py  agent_dispatch.py  agent_registry.py  agent_tasks.py  agent_test.py  agent_test_cli.py  analogy.py  api.py  artifact_registry.py  async_channel.py  audio_multiband.py  audio_routing.py  auth_verification.py  auto_sprint.py  automorphism.py  autosar_can.py  benchmarks_es.py  bica_session_types.py  birkhoff.py  boltzmann_testing.py  buffered_channel.py  category.py  ccs.py  ccsds.py  channel.py  chaos.py  char_poly.py  characteristic.py  ci_gate.py  cli.py  coequalizer.py  complements.py  composer.py  composition.py  composition_viz.py  compress.py  config_domains.py  confluence.py  (+223 more)
tests/: test_aesthetics.py  test_agent_dispatch.py  test_agent_tasks.py  test_analogy.py  test_api.py  test_artifact_registry.py  test_async_channel.py  test_audio_multiband.py  test_audio_routing.py  test_auth_verification.py  test_automorphism.py  test_autosar_can.py  test_benchmarks_es.py  test_birkhoff.py  test_buffered_channel.py  test_category.py  test_ccs.py  test_ccsds.py  test_channel.py  test_chaos.py  test_char_poly.py  test_characteristic.py  test_ci_gate.py  test_cli.py  test_cli_check_extract.py  test_coequalizer.py  test_complements.py  test_composition.py  test_composition_viz.py  test_compress.py  test_config_domains.py  test_confluence.py  test_conformance_checker.py  test_congruence.py  test_connection_detector.py  test_consciousness.py  (+227 more)
(+19 files in other folders)
