[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulate"
version = "0.2.0"
description = "Session types as algebraic reticulates — lattice checker, conformance testing, and protocol extraction"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Alexandre Zua Caldeira", email = "zua@bica-tools.org" },
]

dependencies = []

[project.optional-dependencies]
viz = ["graphviz"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://bica-tools.org"
Repository = "https://github.com/bica-tools/reticulate"
Releases = "https://github.com/bica-tools/reticulate/releases"

[project.scripts]
reticulate = "reticulate.cli:main"

[tool.setuptools.packages.find]
include = ["reticulate*"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/reticulate.1"]
